--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 
 <p id="demo">Apply topbar</p>
 
-<button type="button" onclick='document.body.style.backgroundColor = "black";document.body.style.color = "white"'>Put on dark mode/button>
-
-<button type="button" onclick='document.body.style.backgroundColor = "white";document.body.style.color = "black"'>Put on light mode/button>
+<button type="button" onclick='document.body.style.backgroundColor = "black";document.body.style.color = "white"'>Put on dark mode</button>
+<br>
+<button type="button" onclick='document.body.style.backgroundColor = "white";document.body.style.color = "black"'>Put on light mode</button>
   <b>Works itself with dark mode.</b>
 </body>
 </html>
