--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <button type="button" onclick='document.body.style.backgroundColor = "black";document.body.style.color = "white"'>Put on dark mode</button>
 <br>
 <button type="button" onclick='document.body.style.backgroundColor = "white";document.body.style.color = "black"'>Put on light mode</button>
+<br>
+<button type="button" onclick='document.body.style.backgroundColor = "green";document.body.style.color = "white"'>Put on green mode (white only)</button>
+
+<button type="button" onclick='document.body.style.backgroundColor = "pink";document.body.style.color = "black"'>Put on SEIZURE mode (dark only, do not use.)</button>
   <b>Works itself with dark mode.</b>
 </body>
 </html>
