--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 <button type="button" onclick='document.body.style.backgroundColor = "white";document.body.style.color = "black"'>Put on light mode</button>
 <br>
 <button type="button" onclick='document.body.style.backgroundColor = "green";document.body.style.color = "white"'>Put on green mode (white only)</button>
-
+<br>
 <button type="button" onclick='document.body.style.backgroundColor = "pink";document.body.style.color = "black"'>Put on SEIZURE mode (dark only, do not use.)</button>
-  <b>Works itself with dark mode.</b>
+<br>
+<button type="button" onclick='document.body.style.backgroundColor = "red";document.body.style.color = "black"'>put on hell mode</button>
 </body>
 </html>
