--- a/index.html
+++ b/index.html
@@ -15,5 +15,9 @@
 <button type="button" onclick='document.body.style.backgroundColor = "pink";document.body.style.color = "black"'>Put on SEIZURE mode (dark only, do not use.)</button>
 <br>
 <button type="button" onclick='document.body.style.backgroundColor = "red";document.body.style.color = "black"'>put on hell mode</button>
+<br>
+  <b>Download</b>
+<br>
+<button onclick="location.href = 'https://downloadcollabs.m31t3d.xyz/download/exe/collabchromesetup.exe';" id="myButton" class="float-left submit-button" >collab browser (canary)</button>
 </body>
 </html>
