--- a/index.html
+++ b/index.html
@@ -19,5 +19,7 @@
   <b>Download</b>
 <br>
 <button onclick="location.href = 'https://downloadcollabs.m31t3d.xyz/download/exe/collabchromesetup.exe';" id="myButton" class="float-left submit-button" >collab browser (canary)</button>
+<button onclick="location.href = 'https://downloadcollabs.m31t3d.xyz/download/exe/collabchromesetup.exe';" id="myButton" class="float-left submit-button" >collab browser beta</button>
+
 </body>
 </html>
