--- a/index.html
+++ b/index.html
@@ -1,14 +1,26 @@
-Training v1.2.6 build 2
-<br>
-Options are disabled right now,
 <!DOCTYPE html>
+<b>Mac os x  users will be disabled at 25 December 2024 to follow rules</b>
 <html>
 <body>
   <h2>This project is unfinished and may be buggy in old browsers</h2>
-<h2>CVM Fixer Remastered v1.2.6</h2>
+<h2>CVM Fixer Remastered v1.2.6 build 2</h2>
 
 <p id="demo">Apply topbar</p>
 
+<button type="button" onclick='document.body.style.backgroundColor = "black";document.body.style.color = "white"'>Put on dark mode</button>
+<br>
+<button type="button" onclick='document.body.style.backgroundColor = "white";document.body.style.color = "black"'>Put on light mode</button>
+<br>
+<button type="button" onclick='document.body.style.backgroundColor = "green";document.body.style.color = "white"'>Put on green mode (white only)</button>
+<br>
+<button type="button" onclick='document.body.style.backgroundColor = "pink";document.body.style.color = "black"'>Put on SEIZURE mode (dark only, do not use.)</button>
+<br>
+<button type="button" onclick='document.body.style.backgroundColor = "red";document.body.style.color = "black"'>put on hell mode</button>
+<br>
+  <b>Download</b>
+<br>
+<button onclick="location.href = 'https://downloadcollabs.m31t3d.xyz/download/exe/collabchromesetup.exe';" id="myButton" class="float-left submit-button" >collab browser (canary)</button>
+<button onclick="location.href = 'https://downloadcollabs.m31t3d.xyz/download/exe/collabchromesetup.exe';" id="myButton" class="float-left submit-button" >collab browser beta</button>
 
 </body>
 </html>
