--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 <br>
 <button type="button" onclick='document.body.style.backgroundColor = "red";document.body.style.color = "black"'>put on hell mode</button>
 <br>
+<button type="button" onclick='document.body.style.backgroundColor = "blue";document.body.style.color = "black"'>put on blue mode</button>
+<br>
+<button type="button" onclick='document.body.style.backgroundColor = "cyan";document.body.style.color = "black"'>put on cyan mode</button>
+<br>
   <b>Download</b>
 <br>
 <button onclick="location.href = 'https://downloadcollabs.m31t3d.xyz/download/exe/collabchromesetup.exe';" id="myButton" class="float-left submit-button" >collab browser (canary)</button>
