--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <body>
   <h2>This project is unfinished and may be buggy in old browsers</h2>
-<h2>CVM Fixer Remastered v1.2.6 build 2</h2>
+<h2>CVM Fixer Remastered v2.7</h2>
 
 <p id="demo">Apply topbar</p>
 
